# offline-asr-sub-asr-child-ch

./: CMakeLists.txt  README.md  main.cpp  url.txt
res/: cfg
